# Encrypter-Android

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/adorkw/encrypterandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/android_wrapper/: com_adorkw_encrypterandroid_Encrypter.cpp  com_adorkw_encrypterandroid_Encrypter.h  com_adorkw_encrypterandroid_Encrypter_Companion.cpp  com_adorkw_encrypterandroid_Encrypter_Companion.h
app/src/main/cpp/encrypter/: Encrypter.cpp  Encrypter.h
app/src/main/java/com/adorkw/encrypterandroid/: Encryper.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-v24/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/adorkw/encrypterandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
